# Simple-Final-POO-Project

./: CMakeLists.txt  main.cpp
Classes/: BoardComputer.cpp  BoardComputer.h  FaultManagement.cpp  FaultManagement.h  PerformanceManagement.cpp  PerformanceManagement.h
